packages/svelte/tests/compiler-errors/samples/else-if-before-closing/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'expected-token',
		message: 'Expected token {:then ...} or {:catch ...}',
		position: [26, 26]
	}
});
